--- a/_includes/list_config.html
+++ b/_includes/list_config.html
@@ -2,24 +2,13 @@
 layout: default 
 ---
 
-<div class="container-xxl" >
-
-    <!-- Page content-->
-    <main id="maincontent" role="main" aria-label="Content">
-        <div class="px-1 py-4">
-            <h1 class="mb-4">{{ page.title }}</h1>
-        </div>
-    </main>
-
-</div>
-
 <div class="row justify-content-center">
     <div class="m-3 col-md-8" >
         <div class="card">
             <div class="card-body">
                 <h2 class="card-title h3">Contents</h2>
                 <ul>
-                    {% for configuration in site.data.configurations %}
+                    {% for configuration in data.configurations %}
                     <li>
                         <ul>
                             <li><a href="{{ p.url | relative_url }}">{{ p.name }}</a> </li>
