--- a/_includes/list_config.html
+++ b/_includes/list_config.html
@@ -1,16 +1,33 @@
-
+{% for c in site.data.configurations %}
 <div class="row justify-content-center">
     <div class="m-3 col-md-8" >
         <div class="card">
             <div class="card-body">
+                <h2 class="card-title h3">{{ c.name }}</h2>
+                {{ c.description }}
                 <ul>
-                    {% for c in site.data.configurations %}
-                            <li><a href="{{ c.url | relative_url }}">{{ c.name }}</a> </li>
-                    {% endfor %}
-                    
+                    {% if c.path_adastra %} 
+                    <li>Available on Adastra at : {{ c.path_adastra }} </li>
+                    {% endif %}
+                    {% if path_cal1 %} 
+                    <li>Available on Adastra at : {{ c.path_cal1 }} </li>
+                    {% endif %}
+                    {% if c.path_gricad %} 
+                    <li>Available on Adastra at : {{ c.path_gricad }} </li>
+                    {% endif %} 
+                    {% if c.path_jeanzay %} 
+                    <li>Available on Adastra at : {{ c.path_jeanzay }} </li>
+                    {% endif %}
+                    {% if c.path_irene %} 
+                    <li>Available on Adastra at : {{ c.path_irene }} </li>
+                    {% endif %}
+                    {% if c.url_opendap %} 
+                    <li>Available on <a href="{{c.url_opendap }}">opendap</a> </li>
+                    {% endif %}               
                 </ul>
             </div>
         </div>
     </div>
 </div>
+{% endfor %}
 
