--- a/_includes/list_config.html
+++ b/_includes/list_config.html
@@ -7,19 +7,19 @@
                 {{ c.description }}
                 <ul>
                     {% if c.path_adastra %} 
-                    <li>Available on Adastra at : {{ c.path_adastra }} </li>
+                    <li>Available on Adastra at : <code class="language-plaintext highlighter-rouge">{{ c.path_adastra }}</code> </li>
                     {% endif %}
                     {% if path_cal1 %} 
-                    <li>Available on Adastra at : {{ c.path_cal1 }} </li>
+                    <li>Available on Adastra at : <code class="language-plaintext highlighter-rouge">{{ c.path_cal1 }}</code> </li>
                     {% endif %}
                     {% if c.path_gricad %} 
-                    <li>Available on Adastra at : {{ c.path_gricad }} </li>
+                    <li>Available on Adastra at : <code class="language-plaintext highlighter-rouge">{{ c.path_gricad }}</code> </li>
                     {% endif %} 
                     {% if c.path_jeanzay %} 
-                    <li>Available on Adastra at : {{ c.path_jeanzay }} </li>
+                    <li>Available on Adastra at : <code class="language-plaintext highlighter-rouge">{{ c.path_jeanzay }}</code> </li>
                     {% endif %}
                     {% if c.path_irene %} 
-                    <li>Available on Adastra at : {{ c.path_irene }} </li>
+                    <li>Available on Adastra at : <code class="language-plaintext highlighter-rouge">{{ c.path_irene }}</code> </li>
                     {% endif %}
                     {% if c.url_opendap %} 
                     <li>Available on <a href="{{c.url_opendap }}">opendap</a> </li>
